--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="qr-container">
-    <article class="qr-card">
+  <main class="qr-container">
+    <section class="qr-card">
       <img class="qr-card__image" src="images/image-qr-code.png" alt="Improve your front-end skills by building projects">
-      <h2 class="qr-card__title">Improve your front-end skills by building projects</h2>
+      <h1 class="qr-card__title">Improve your front-end skills by building projects</h1>
       <p class="qr-card__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </article>
-  </div>
+    </section>
+  </main>
 </body>
 </html>
